updated aboutwindow changelog

--- a/po/Eyedropper.pot
+++ b/po/Eyedropper.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/gtk/-/issues/\n"
-"POT-Creation-Date: 2022-10-10 22:06+0200\n"
+"POT-Creation-Date: 2022-10-11 20:51+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -236,9 +236,11 @@ msgctxt ""
 "closing tag. Since xgettext does not recognize rust multiline strings, this "
 "should be on a single line using line breaks (\\n) for new lines."
 msgid ""
-"<p>This release extends the current available features.</p>\n"
-"<p> Features:</p>\n"
-"<ul><li> A new Palette dialog showing different color palettes</li><li> "
+"<p>This release extends the current available features.</p><p> Features:</"
+"p>\n"
+"<ul><li> The name of the color, specified by w3c color keywords and the xkcd "
+"color survey, can now be shown</li><li> A new Palette dialog showing "
+"different color palettes</li><li> Show the CIELCh color format</li><li> "
 "Using the new AdwAboutWindow</li><li> Added new translations</li><li>Fixed "
 "minor issues</li></ul>"
 msgstr ""
