--- a/po/Eyedropper.pot
+++ b/po/Eyedropper.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/gtk/-/issues/\n"
-"POT-Creation-Date: 2022-10-14 21:51+0200\n"
+"POT-Creation-Date: 2022-10-14 22:04+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -195,129 +195,169 @@ msgid "Start"
 msgstr ""
 
 #: data/resources/ui/preferences.ui:31
-msgid "CIE illuminants"
-msgstr ""
-
-#: data/resources/ui/preferences.ui:32
-msgid "Under which conditions are the colors observed"
-msgstr ""
-
-#: data/resources/ui/preferences.ui:36
-msgctxt "ComboRow selection item for color observer"
-msgid "A (Incandescent/tungsten)"
-msgstr ""
-
-#: data/resources/ui/preferences.ui:37
-msgctxt "ComboRow selection item for color observer"
-msgid "B (Old direct sunlight at noon)"
-msgstr ""
-
-#: data/resources/ui/preferences.ui:38
-msgctxt "ComboRow selection item for color observer"
-msgid "C (Old daylight)"
-msgstr ""
-
-#: data/resources/ui/preferences.ui:39
-msgctxt "ComboRow selection item for color observer"
-msgid "D50 (ICC profile PCS)"
-msgstr ""
-
-#: data/resources/ui/preferences.ui:40
-msgctxt "ComboRow selection item for color observer"
-msgid "D55 (Mid-morning daylight)"
-msgstr ""
-
-#: data/resources/ui/preferences.ui:41
-msgctxt "ComboRow selection item for color observer"
-msgid "D65 (Daylight, sRGB, Adobe-RGB)"
-msgstr ""
-
-#: data/resources/ui/preferences.ui:42
-msgctxt "ComboRow selection item for color observer"
-msgid "D75 (North sky daylight)"
-msgstr ""
-
-#: data/resources/ui/preferences.ui:43
-msgctxt "ComboRow selection item for color observer"
-msgid "E (Equal energy)"
-msgstr ""
-
-#: data/resources/ui/preferences.ui:44
-msgctxt "ComboRow selection item for color observer"
-msgid "F1 (Daylight Fluorescent)"
-msgstr ""
-
-#: data/resources/ui/preferences.ui:45
-msgctxt "ComboRow selection item for color observer"
-msgid "F2 (Cool fluorescent)"
-msgstr ""
-
-#: data/resources/ui/preferences.ui:46
-msgctxt "ComboRow selection item for color observer"
-msgid "F3 (White Fluorescent)"
-msgstr ""
-
-#: data/resources/ui/preferences.ui:47
-msgctxt "ComboRow selection item for color observer"
-msgid "F4 (Warm White Fluorescent)"
-msgstr ""
-
-#: data/resources/ui/preferences.ui:48
-msgctxt "ComboRow selection item for color observer"
-msgid "F5 (Daylight Fluorescent)"
-msgstr ""
-
-#: data/resources/ui/preferences.ui:49
-msgctxt "ComboRow selection item for color observer"
-msgid "F6 (Lite White Fluorescent)"
-msgstr ""
-
-#: data/resources/ui/preferences.ui:50
-msgctxt "ComboRow selection item for color observer"
-msgid "F7 (Daylight fluorescent, D65 simulator)"
-msgstr ""
-
-#: data/resources/ui/preferences.ui:51
-msgctxt "ComboRow selection item for color observer"
-msgid "F8 (Sylvania F40, D50 simulator)"
-msgstr ""
-
-#: data/resources/ui/preferences.ui:52
-msgctxt "ComboRow selection item for color observer"
-msgid "F9 (Cool White Fluorescent)"
-msgstr ""
-
-#: data/resources/ui/preferences.ui:53
-msgctxt "ComboRow selection item for color observer"
-msgid "F10 (Ultralume 50, Philips TL85)"
-msgstr ""
-
-#: data/resources/ui/preferences.ui:54
-msgctxt "ComboRow selection item for color observer"
-msgid "F11 (Ultralume 40, Philips TL84)"
-msgstr ""
-
-#: data/resources/ui/preferences.ui:55
-msgctxt "ComboRow selection item for color observer"
-msgid "F12 (Ultralume 30, Philips TL83)"
-msgstr ""
-
-#: data/resources/ui/preferences.ui:63
 msgid "CIE standard observer"
 msgstr ""
 
-#: data/resources/ui/preferences.ui:64
+#: data/resources/ui/preferences.ui:32
 msgid "Field of view used by the CIE standard observer"
 msgstr ""
 
-#: data/resources/ui/preferences.ui:68
+#: data/resources/ui/preferences.ui:36
 msgctxt "ComboRow selection item for obersver degree"
 msgid "2°"
 msgstr ""
 
-#: data/resources/ui/preferences.ui:69
+#: data/resources/ui/preferences.ui:37
 msgctxt "ComboRow selection item for obersver degree"
 msgid "10°"
+msgstr ""
+
+#: data/resources/ui/preferences.ui:45
+msgid "CIE illuminants"
+msgstr ""
+
+#: data/resources/ui/preferences.ui:46
+msgid "Under which conditions are the colors observed"
+msgstr ""
+
+#: data/resources/ui/preferences.ui:50
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "A (Incandescent/tungsten)"
+msgstr ""
+
+#: data/resources/ui/preferences.ui:51
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "B (Old direct sunlight at noon)"
+msgstr ""
+
+#: data/resources/ui/preferences.ui:52
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "C (Old daylight)"
+msgstr ""
+
+#: data/resources/ui/preferences.ui:53
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "D50 (ICC profile PCS)"
+msgstr ""
+
+#: data/resources/ui/preferences.ui:54
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "D55 (Mid-morning daylight)"
+msgstr ""
+
+#: data/resources/ui/preferences.ui:55
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "D65 (Daylight, sRGB, Adobe-RGB)"
+msgstr ""
+
+#: data/resources/ui/preferences.ui:56
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "D75 (North sky daylight)"
+msgstr ""
+
+#: data/resources/ui/preferences.ui:57
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "E (Equal energy)"
+msgstr ""
+
+#: data/resources/ui/preferences.ui:58
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F1 (Daylight Fluorescent)"
+msgstr ""
+
+#: data/resources/ui/preferences.ui:59
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F2 (Cool fluorescent)"
+msgstr ""
+
+#: data/resources/ui/preferences.ui:60
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F3 (White Fluorescent)"
+msgstr ""
+
+#: data/resources/ui/preferences.ui:61
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F4 (Warm White Fluorescent)"
+msgstr ""
+
+#: data/resources/ui/preferences.ui:62
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F5 (Daylight Fluorescent)"
+msgstr ""
+
+#: data/resources/ui/preferences.ui:63
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F6 (Lite White Fluorescent)"
+msgstr ""
+
+#: data/resources/ui/preferences.ui:64
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F7 (Daylight fluorescent, D65 simulator)"
+msgstr ""
+
+#: data/resources/ui/preferences.ui:65
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F8 (Sylvania F40, D50 simulator)"
+msgstr ""
+
+#: data/resources/ui/preferences.ui:66
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F9 (Cool White Fluorescent)"
+msgstr ""
+
+#: data/resources/ui/preferences.ui:67
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F10 (Ultralume 50, Philips TL85)"
+msgstr ""
+
+#: data/resources/ui/preferences.ui:68
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F11 (Ultralume 40, Philips TL84)"
+msgstr ""
+
+#: data/resources/ui/preferences.ui:69
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F12 (Ultralume 30, Philips TL83)"
 msgstr ""
 
 #: data/resources/ui/preferences.ui:77
@@ -410,82 +450,82 @@ msgctxt "Color palette consisting of six slight shifted colors"
 msgid "Analogous"
 msgstr ""
 
-#: src/widgets/preferences.rs:143
+#: src/widgets/preferences.rs:147
 msgctxt ""
 "Name of the basic color keyword set from https://www.w3.org/TR/css-color-3/"
 "#html4"
 msgid "Basic"
 msgstr ""
 
-#: src/widgets/preferences.rs:145
+#: src/widgets/preferences.rs:149
 msgid "Show color names from the w3c basic color keyword set"
 msgstr ""
 
-#: src/widgets/preferences.rs:151
+#: src/widgets/preferences.rs:155
 msgctxt ""
 "Name of the extended color keyword set from https://www.w3.org/TR/css-"
 "color-3/#svg-color"
 msgid "Extended"
 msgstr ""
 
-#: src/widgets/preferences.rs:153
+#: src/widgets/preferences.rs:157
 msgid "Show color names from the w3c extended color keyword  set"
 msgstr ""
 
-#: src/widgets/preferences.rs:157
+#: src/widgets/preferences.rs:161
 msgctxt "Name of the color set from the xkcd color survey"
 msgid "xkcd"
 msgstr ""
 
-#: src/widgets/preferences.rs:158
+#: src/widgets/preferences.rs:162
 msgid "Show color names from the xkcd color survey"
 msgstr ""
 
-#: src/widgets/preferences.rs:297
+#: src/widgets/preferences.rs:301
 msgid "Move Up"
 msgstr ""
 
-#: src/widgets/preferences.rs:299
+#: src/widgets/preferences.rs:303
 msgid "Move Down"
 msgstr ""
 
-#: src/widgets/preferences.rs:419
+#: src/widgets/preferences.rs:423
 msgid "Hex-Code"
 msgstr ""
 
-#: src/widgets/preferences.rs:425
+#: src/widgets/preferences.rs:429
 msgid "RGB"
 msgstr ""
 
-#: src/widgets/preferences.rs:431
+#: src/widgets/preferences.rs:435
 msgid "HSL"
 msgstr ""
 
-#: src/widgets/preferences.rs:439
+#: src/widgets/preferences.rs:443
 msgid "HSV"
 msgstr ""
 
-#: src/widgets/preferences.rs:448
+#: src/widgets/preferences.rs:452
 msgid "CMYK"
 msgstr ""
 
-#: src/widgets/preferences.rs:457
+#: src/widgets/preferences.rs:461
 msgid "XYZ"
 msgstr ""
 
-#: src/widgets/preferences.rs:466
+#: src/widgets/preferences.rs:470
 msgid "CIELAB"
 msgstr ""
 
-#: src/widgets/preferences.rs:478
+#: src/widgets/preferences.rs:482
 msgid "HWB"
 msgstr ""
 
-#: src/widgets/preferences.rs:492
+#: src/widgets/preferences.rs:496
 msgid "CIELCh / HCL"
 msgstr ""
 
-#: src/widgets/preferences.rs:499
+#: src/widgets/preferences.rs:503
 msgid "Name"
 msgstr ""
 
