--- a/po/Eyedropper.pot
+++ b/po/Eyedropper.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/gtk/-/issues/\n"
-"POT-Creation-Date: 2022-10-15 10:36+0200\n"
+"POT-Creation-Date: 2022-10-15 15:03+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -408,11 +408,12 @@ msgid ""
 "<p>This release extends the current available features.</p><p> Features:</"
 "p>\n"
 "<ul><li> The name of the color, specified by w3c color keywords and the xkcd "
-"color survey, can now be shown</li><li> A new Palette dialog showing "
-"different color palettes</li><li>Choose which CIE standard observer is used, "
-"as well as it's illuminant</li><li> Show the CIELCh color format</li><li> "
-"Using the new AdwAboutWindow</li><li> Added new translations</li><li>Fixed "
-"minor issues</li></ul>"
+"color survey, can now be shown</li><li>Switch the color by entering a color "
+"keyword</li><li> A new Palette dialog showing different color palettes</"
+"li><li>Choose which CIE standard observer is used, as well as it's "
+"illuminant</li><li> Show the CIELCh color format</li><li> Using the new "
+"AdwAboutWindow</li><li> Added new translations</li><li>Fixed minor issues</"
+"li></ul>"
 msgstr ""
 
 #: src/widgets/palette_dialog.rs:130
