updated german translation

--- a/po/de.po
+++ b/po/de.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Eyedropper\n"
 "Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/gtk/-/issues/\n"
-"POT-Creation-Date: 2022-10-04 20:51+0200\n"
-"PO-Revision-Date: 2022-10-04 21:00+0200\n"
+"POT-Creation-Date: 2022-10-15 15:10+0200\n"
+"PO-Revision-Date: 2022-10-15 15:31+0200\n"
 "Last-Translator: FineFindus <FineFindusGH@gmail.com>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -20,7 +20,7 @@ msgstr ""
 
 #: data/com.github.finefindus.eyedropper.desktop.in.in:3
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:7
-#: data/resources/ui/window.ui:35 src/main.rs:24 src/widgets/about_window.rs:44
+#: data/resources/ui/window.ui:35 src/main.rs:25 src/widgets/about_window.rs:44
 msgid "Eyedropper"
 msgstr "Eyedropper"
 
@@ -29,18 +29,15 @@ msgid "Color Picker"
 msgstr "Farbwähler"
 
 #: data/com.github.finefindus.eyedropper.desktop.in.in:5
-msgid "An easy-to-use color picker"
-msgstr "Ein benutzerfreundlicher Farbwähler"
+#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:8
+#: src/widgets/about_window.rs:74
+msgid "A powerful color picker and formatter"
+msgstr "Ein leistungsfähiger Farbwähler and Editor"
 
 #. Translators: Search terms to find this application. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
 #: data/com.github.finefindus.eyedropper.desktop.in.in:11
 msgid "Gnome;GTK;Color;Color Picker;Picker;Palette;"
 msgstr "Gnome;GTK;Farben;Farbwähler;Wähler;"
-
-#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:8
-#: src/widgets/about_window.rs:74
-msgid "An easy-to-use color picker and editor"
-msgstr "Ein benutzerfreundlicher Farbwähler and Editor"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:10
 #: src/widgets/about_window.rs:77
@@ -83,7 +80,7 @@ msgstr "Zeige Farben im Hex, RGB, HSV, HSL, CMYK, XYZ und CIE-Lab Format"
 #: src/widgets/about_window.rs:90
 msgid "Customize which formats appear as well as their order"
 msgstr ""
-"Passe an ob und in welcher Reihenfolge die Farbformate angezeigt werden."
+"Passe an ob und in welcher Reihenfolge die Farbformate angezeigt werden"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:21
 #: src/widgets/about_window.rs:91
@@ -106,65 +103,13 @@ msgstr "Benutzerdefinierte Farbformate im dunklen Modus"
 msgid "Customized color formatting"
 msgstr "Benutzerdefiniertes Farbformate"
 
-#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:88
+#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:43
+msgid "Generated color palettes"
+msgstr "Generierte Farbpaletten"
+
+#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:95
 msgid "FineFindus"
 msgstr "FineFindus"
-
-#: data/resources/ui/color-model-entry.ui:22
-msgctxt "Tooltip of the copy button for format rows"
-msgid "Copy Format"
-msgstr "Format kopieren"
-
-#: data/resources/ui/hex-entry.ui:22
-msgctxt "Tooltip of the copy button for the hex format"
-msgid "Copy Format"
-msgstr "Format kopieren"
-
-#: data/resources/ui/palette_window.ui:5
-msgid "Palettes"
-msgstr "Farbpaletten"
-
-#: data/resources/ui/preferences.ui:10
-msgid "General"
-msgstr "Allgemein"
-
-#: data/resources/ui/preferences.ui:13
-msgid "Formatting"
-msgstr "Formatierung"
-
-#: data/resources/ui/preferences.ui:16
-msgid "Alpha-Value-Position"
-msgstr "Alphawertposition"
-
-#: data/resources/ui/preferences.ui:17
-msgid "Where the Alphavalue is positioned in the Hexstring"
-msgstr "An welcher Stelle der Alphawert angezeigt wird"
-
-#: data/resources/ui/preferences.ui:21
-msgid "None"
-msgstr "Nicht anzeigen"
-
-#: data/resources/ui/preferences.ui:22
-msgid "End"
-msgstr "Ende"
-
-#: data/resources/ui/preferences.ui:23
-msgid "Start"
-msgstr "Start"
-
-#: data/resources/ui/preferences.ui:33
-msgid "Color Formats"
-msgstr "Farbformate"
-
-#: data/resources/ui/preferences.ui:34
-msgid "Customize the visible formats and in which order they are displayed."
-msgstr ""
-"Passe an ob und in welcher Reihenfolge die Farbformate angezeigt werden."
-
-#: data/resources/ui/preferences.ui:38
-msgctxt "Tooltip of the button to reset the format order"
-msgid "Reset Order"
-msgstr "Reihenfolge zurücksetzen"
 
 #: data/resources/ui/shortcuts.ui:11
 msgctxt "shortcut window"
@@ -222,6 +167,239 @@ msgctxt "Tooltip of the colorpicker button"
 msgid "Pick a Color"
 msgstr "Neue Farbe auswählen"
 
+#: data/resources/ui/hex-entry.ui:22
+msgctxt "Tooltip of the copy button for the hex format"
+msgid "Copy Format"
+msgstr "Format kopieren"
+
+#: data/resources/ui/preferences.ui:10
+msgid "General"
+msgstr "Allgemein"
+
+#: data/resources/ui/preferences.ui:13
+msgid "Formatting"
+msgstr "Formatierung"
+
+#: data/resources/ui/preferences.ui:16
+msgid "Alpha-Value-Position"
+msgstr "Alphawertposition"
+
+#: data/resources/ui/preferences.ui:17
+msgid "Where the Alphavalue is positioned in the Hexstring"
+msgstr "An welcher Stelle der Alphawert angezeigt wird"
+
+#: data/resources/ui/preferences.ui:21
+msgctxt "Alpha is not shown"
+msgid "None"
+msgstr "Nicht anzeigen"
+
+#: data/resources/ui/preferences.ui:22
+msgctxt "Alpha is shown at the end of the string"
+msgid "End"
+msgstr "Ende"
+
+#: data/resources/ui/preferences.ui:23
+msgctxt "Alpha is shown at the start of the string"
+msgid "Start"
+msgstr "Start"
+
+#: data/resources/ui/preferences.ui:31
+msgid "CIE standard observer"
+msgstr "CIE-Normalbeobachter"
+
+#: data/resources/ui/preferences.ui:32
+msgid "Field of view used by the CIE standard observer"
+msgstr "Sichtfeld des CIE-Normalbeobachters"
+
+#: data/resources/ui/preferences.ui:36
+msgctxt "CIE 2° standard observer"
+msgid "2°"
+msgstr "2°"
+
+#: data/resources/ui/preferences.ui:37
+msgctxt "CIE 10° standard observer"
+msgid "10°"
+msgstr "10°"
+
+#: data/resources/ui/preferences.ui:45
+msgid "CIE illuminants"
+msgstr "Normlicht"
+
+#: data/resources/ui/preferences.ui:46
+msgid "Under which conditions are the colors observed"
+msgstr "Unter welche Bedingungen die Farben betrachtet werden"
+
+#: data/resources/ui/preferences.ui:50
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "A (Incandescent/tungsten)"
+msgstr "A (konventionelle Glühlampe)"
+
+#: data/resources/ui/preferences.ui:51
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "B (Old direct sunlight at noon)"
+msgstr "B (veraltetes Tageslicht)"
+
+#: data/resources/ui/preferences.ui:52
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "C (Old daylight)"
+msgstr "C (mittleres Tageslicht, heute D65)"
+
+#: data/resources/ui/preferences.ui:53
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "D50 (ICC profile PCS)"
+msgstr "D50 (Weißpunkt für Wide-Gamut-RGB und Color-Match-RGB)"
+
+#: data/resources/ui/preferences.ui:54
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "D55 (Mid-morning daylight)"
+msgstr "D55 (Direktes Sonnenlicht)"
+
+#: data/resources/ui/preferences.ui:55
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "D65 (Daylight, sRGB, Adobe-RGB)"
+msgstr "D65 (mittleres Tageslicht, sRGB, Adobe-RGB)"
+
+#: data/resources/ui/preferences.ui:56
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "D75 (North sky daylight)"
+msgstr "D75 (Farbtemperatur von 7510 K)"
+
+#: data/resources/ui/preferences.ui:57
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "E (Equal energy)"
+msgstr "E (Energiegleicher Punkt)"
+
+#: data/resources/ui/preferences.ui:58
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F1 (Daylight Fluorescent)"
+msgstr "F1 (Fluoreszierendes Tageslicht)"
+
+#: data/resources/ui/preferences.ui:59
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F2 (Cool fluorescent)"
+msgstr "F2 (Kalt Fluoreszierend)"
+
+#: data/resources/ui/preferences.ui:60
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F3 (White Fluorescent)"
+msgstr "F3 (Weiß Fluoreszierend)"
+
+#: data/resources/ui/preferences.ui:61
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F4 (Warm White Fluorescent)"
+msgstr "F4 (Warm Weiß Fluorescent)"
+
+#: data/resources/ui/preferences.ui:62
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F5 (Daylight Fluorescent)"
+msgstr "F5 (Tageslicht Fluoreszierend)"
+
+#: data/resources/ui/preferences.ui:63
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F6 (Lite White Fluorescent)"
+msgstr "F6 (Leicht Weiß Fluorescent)"
+
+#: data/resources/ui/preferences.ui:64
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F7 (Daylight fluorescent, D65 simulator)"
+msgstr "F7 (Tageslicht Fluoreszierend, D65 simulator)"
+
+#: data/resources/ui/preferences.ui:65
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F8 (Sylvania F40, D50 simulator)"
+msgstr "F8 (Sylvania F40, D50 simulator)"
+
+#: data/resources/ui/preferences.ui:66
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F9 (Cool White Fluorescent)"
+msgstr "F9 (Kalt Weiß )"
+
+#: data/resources/ui/preferences.ui:67
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F10 (Ultralume 50, Philips TL85)"
+msgstr "F10 (Ultralume 50, Philips TL85)"
+
+#: data/resources/ui/preferences.ui:68
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F11 (Ultralume 40, Philips TL84)"
+msgstr "F11 (Ultralume 40, Philips TL84)"
+
+#: data/resources/ui/preferences.ui:69
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F12 (Ultralume 30, Philips TL83)"
+msgstr "F12 (Ultralume 30, Philips TL83)"
+
+#: data/resources/ui/preferences.ui:77
+msgid "Name Sets"
+msgstr "Namesquellen"
+
+#: data/resources/ui/preferences.ui:78
+msgid "Which color name sets should be used for the names"
+msgstr "Welche Quellen für die Namen benutzt werden"
+
+#: data/resources/ui/preferences.ui:92
+msgid "Color Formats"
+msgstr "Farbformate"
+
+#: data/resources/ui/preferences.ui:93
+msgid "Customize the visible formats and in which order they are displayed."
+msgstr ""
+"Passe an ob und in welcher Reihenfolge die Farbformate angezeigt werden."
+
+#: data/resources/ui/preferences.ui:97
+msgctxt "Tooltip of the button to reset the format order"
+msgid "Reset Order"
+msgstr "Reihenfolge zurücksetzen"
+
+#: data/resources/ui/color-format-row.ui:22
+msgctxt "Tooltip of the copy button for format rows"
+msgid "Copy Format"
+msgstr "Format kopieren"
+
+#: data/resources/ui/palette-window.ui:5
+msgid "Palettes"
+msgstr "Farbpaletten"
+
 #. Translators: This should not be translate, Please enter your credits here instead (format: "Name https://example.com" or "Name <email@example.com>", no quotes)
 #: src/widgets/about_window.rs:50
 msgid "translator-credits"
@@ -234,92 +412,179 @@ msgctxt ""
 "closing tag. Since xgettext does not recognize rust multiline strings, this "
 "should be on a single line using line breaks (\\n) for new lines."
 msgid ""
-"<p>This is a minor release, improving on the currently available features.</"
+"<p>This release extends the current available features.</p><p> Features:</"
 "p>\n"
-"<p> Features:</p>\n"
-"<ul><li> Added new translations</li><li>Fixed minor issues</li></ul>"
+"<ul><li> The name of the color, specified by w3c color keywords and the xkcd "
+"color survey, can now be shown</li><li>Switch the color by entering a color "
+"keyword</li><li> A new Palette dialog showing different color palettes</"
+"li><li>Choose which CIE standard observer is used, as well as it's "
+"illuminant</li><li> Show the CIELCh color format</li><li> Using the new "
+"AdwAboutWindow</li><li> Added new translations</li><li>Fixed minor issues</"
+"li></ul>"
 msgstr ""
-"<p>Eine kleinere Veröffentlichung, welche nur die verfügbaren Features "
-"verbessert.</p>\n"
-"<p> Features:</p>\n"
-"<ul><li> Neue Übersetzungen</li><li>Bugs gefixt</li></ul>"
+"<p>Diese Version erweitert dies bisher vorhandenen Features.</p><p> Features:"
+"</p>\n"
+"<ul><li> Der Farbname, aus der  w3c color keywords Liste und der xkcd color "
+"survey,kann nun angezeigt werden</li><li>Ändere die Farbe durch eintragen "
+"des Namens</li><li>Ein neuer Farbpaletten-Dialog zeigt die Farbpaletten an</"
+"li><li>Wähle welcher CIE-Normalbeobachter, bzw welches Normlicht genutzt "
+"werden</li><li> Zeige das CIELCh-Farbformat</li><li>Der neute Infodialog "
+"wird genutzt</li><li> Neue Übersetzungen</li><li>Kleinere Fehler wurden "
+"behoben</li></ul>"
 
-#: src/widgets/palette_dialog.rs:133
+#: src/widgets/palette_dialog.rs:130
+msgctxt "Name for tints (lighter variants) of the color"
+msgid "Tints"
+msgstr "Tönung"
+
+#: src/widgets/palette_dialog.rs:134
+msgctxt "Name for shades (darker variants) of the color"
+msgid "Shades"
+msgstr "Schattierungen"
+
+#: src/widgets/palette_dialog.rs:140
 msgctxt "Name for the opposite/complementary color (e.g. blue ⇔ yellow)"
 msgid "Complementary"
 msgstr "Komplementär"
 
-#: src/widgets/palette_dialog.rs:140
+#: src/widgets/palette_dialog.rs:147
 msgctxt ""
 "The name of the color palette. Consist of the two opposite colors (e.g. blue "
 "⇔ orange / green)"
 msgid "Split-Complementary"
 msgstr "Zweifach-Komplementär"
 
-#: src/widgets/palette_dialog.rs:147
+#: src/widgets/palette_dialog.rs:154
 msgctxt ""
 "Name of the color palette, which would form a triangle above the color wheel"
 msgid "Triadic"
 msgstr "Triade"
 
-#: src/widgets/palette_dialog.rs:152
+#: src/widgets/palette_dialog.rs:159
 msgctxt "The name of the color palette."
 msgid "Tetradic"
 msgstr "Quadrat"
 
-#: src/widgets/palette_dialog.rs:158
+#: src/widgets/palette_dialog.rs:165
 msgctxt "Color palette consisting of six slight shifted colors"
 msgid "Analogous"
 msgstr "Ähnlich"
 
-#: src/widgets/preferences.rs:226
+#: src/widgets/preferences.rs:147
+msgctxt ""
+"Name of the basic color keyword set from https://www.w3.org/TR/css-color-3/"
+"#html4"
+msgid "Basic"
+msgstr "Einfach"
+
+#: src/widgets/preferences.rs:149
+msgid "Show color names from the w3c basic color keyword set"
+msgstr "Zeige die Farbnamen des W3C Basic Farbsets"
+
+#: src/widgets/preferences.rs:155
+msgctxt ""
+"Name of the extended color keyword set from https://www.w3.org/TR/css-"
+"color-3/#svg-color"
+msgid "Extended"
+msgstr "Erweitert"
+
+#: src/widgets/preferences.rs:157
+msgid "Show color names from the w3c extended color keyword  set"
+msgstr "Zeige die Farbnamen des W3C Erweiterten Farbsets"
+
+#: src/widgets/preferences.rs:161
+msgctxt "Name of the color set from the xkcd color survey"
+msgid "xkcd"
+msgstr "xkcd"
+
+#: src/widgets/preferences.rs:162
+msgid "Show color names from the xkcd color survey"
+msgstr "Zeige die Farbnamen aus der xkcd-Farbumfrage"
+
+#: src/widgets/preferences.rs:301
 msgid "Move Up"
 msgstr "Nach oben verschieben"
 
-#: src/widgets/preferences.rs:228
+#: src/widgets/preferences.rs:303
 msgid "Move Down"
 msgstr "Nach unten verschieben"
 
-#: src/widgets/preferences.rs:317
+#: src/widgets/preferences.rs:423
 msgid "Hex-Code"
 msgstr "Hexadezimal-Code"
 
-#: src/widgets/preferences.rs:323
+#: src/widgets/preferences.rs:429
 msgid "RGB"
 msgstr "RGB"
 
-#: src/widgets/preferences.rs:331
+#: src/widgets/preferences.rs:435
 msgid "HSL"
 msgstr "HSL"
 
-#: src/widgets/preferences.rs:340
+#: src/widgets/preferences.rs:443
 msgid "HSV"
 msgstr "HSV"
 
-#: src/widgets/preferences.rs:349
+#: src/widgets/preferences.rs:452
 msgid "CMYK"
 msgstr "CMYK"
 
-#: src/widgets/preferences.rs:358
+#: src/widgets/preferences.rs:461
 msgid "XYZ"
 msgstr "XYZ"
 
-#: src/widgets/preferences.rs:367
+#: src/widgets/preferences.rs:470
 msgid "CIELAB"
 msgstr "CIELAB"
 
-#: src/window.rs:477
+#: src/widgets/preferences.rs:482
+msgid "HWB"
+msgstr "HWB"
+
+#: src/widgets/preferences.rs:496
+msgid "CIELCh / HCL"
+msgstr "CIELCh / HCL"
+
+#: src/widgets/preferences.rs:503
+msgid "Name"
+msgstr "Name"
+
+#: src/window.rs:349 src/window.rs:635
+msgctxt "Information that no name for the color could be found"
+msgid "Not named"
+msgstr "Unbenannt"
+
+#: src/window.rs:537
 msgid "Failed to get palette color"
 msgstr "Palettenfarbauswahl fehlgeschlagen"
 
-#: src/window.rs:497
+#: src/window.rs:557
 msgid "Failed to pick a color"
 msgstr "Farbauswahl fehlgeschlagen"
 
 #. Translators: Do not replace the {}. These are used as placeholders for the copied values
-#: src/window.rs:659 src/window.rs:666
+#: src/window.rs:655
 msgid "Copied: “{}”"
 msgstr "„{}” kopiert"
+
+#~ msgid "An easy-to-use color picker"
+#~ msgstr "Ein benutzerfreundlicher Farbwähler"
+
+#~ msgctxt ""
+#~ "The changelog of the current version. Should be similar to the CHANGELOG."
+#~ "md file at the project root. Please ensure that the tags have a matching "
+#~ "closing tag. Since xgettext does not recognize rust multiline strings, "
+#~ "this should be on a single line using line breaks (\\n) for new lines."
+#~ msgid ""
+#~ "<p>This is a minor release, improving on the currently available features."
+#~ "</p>\n"
+#~ "<p> Features:</p>\n"
+#~ "<ul><li> Added new translations</li><li>Fixed minor issues</li></ul>"
+#~ msgstr ""
+#~ "<p>Eine kleinere Veröffentlichung, welche nur die verfügbaren Features "
+#~ "verbessert.</p>\n"
+#~ "<p> Features:</p>\n"
+#~ "<ul><li> Neue Übersetzungen</li><li>Bugs gefixt</li></ul>"
 
 #~ msgid "Available Formats:"
 #~ msgstr "Verfügbare Formate:"
