--- a/po/fr.po
+++ b/po/fr.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Eyedropper master\n"
 "Report-Msgid-Bugs-To: https://gitlab.gnome.org/GNOME/gtk/-/issues/\n"
-"POT-Creation-Date: 2022-09-22 18:09+0200\n"
-"PO-Revision-Date: 2022-09-23 15:39+0200\n"
+"POT-Creation-Date: 2022-10-15 15:03+0200\n"
+"PO-Revision-Date: 2022-10-15 16:16+0200\n"
 "Last-Translator: Irénée Thirion <irenee.thirion@e.email>\n"
 "Language-Team: French <gnomefr@traduc.org>\n"
 "Language: fr\n"
@@ -21,7 +21,7 @@ msgstr ""
 
 #: data/com.github.finefindus.eyedropper.desktop.in.in:3
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:7
-#: data/resources/ui/window.ui:35 src/main.rs:24
+#: data/resources/ui/window.ui:35 src/main.rs:25 src/widgets/about_window.rs:44
 msgid "Eyedropper"
 msgstr "Pipette"
 
@@ -30,8 +30,10 @@ msgid "Color Picker"
 msgstr "Sélecteur de couleurs"
 
 #: data/com.github.finefindus.eyedropper.desktop.in.in:5
-msgid "An easy-to-use color picker"
-msgstr "Un sélecteur de couleurs facile à utiliser"
+#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:8
+#: src/widgets/about_window.rs:74
+msgid "A powerful color picker and formatter"
+msgstr "Un puissant sélecteur et formateur de couleurs"
 
 #. Translators: Search terms to find this application. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
 #: data/com.github.finefindus.eyedropper.desktop.in.in:11
@@ -40,15 +42,12 @@ msgstr ""
 "Gnome;GTK;Color;Color Picker;Picker;Palette;Pipette;couleur;sélecteur;"
 "eyedropper;"
 
-#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:8
-msgid "An easy-to-use color picker and editor"
-msgstr "Un sélecteur et éditeur de couleurs facile à utiliser"
-
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:10
+#: src/widgets/about_window.rs:77
 msgid ""
 "Pick any color from your screen and view it in different formats. Change the "
 "picked color or go back to a previously picked color from the history list. "
-"Generate a list of different shades fromt he picked color."
+"Generate a list of different shades from the picked color."
 msgstr ""
 "Choisissez une couleur de votre écran et visualisez-la dans différents "
 "formats. Changez la couleur sélectionnée ou retournez à une couleur "
@@ -56,113 +55,65 @@ msgstr ""
 "différentes nuances à partir de la couleur choisie."
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:14
-msgid "Available Formats:"
-msgstr "Formats disponibles :"
+#: src/widgets/about_window.rs:82
+msgid "Features"
+msgstr "Fonctionnalités"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:16
-msgid "Hex"
-msgstr "Hexadécimal"
+#: src/widgets/about_window.rs:86
+msgid "Pick a Color"
+msgstr "Choisissez une couleur"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:17
-#: src/widgets/preferences.rs:311
-msgid "RGB"
-msgstr "RGB"
+#: src/widgets/about_window.rs:87
+msgid "Enter a color in Hex-Format"
+msgstr "Entrez un couleur en format hexadécimal"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:18
-#: src/widgets/preferences.rs:319
-msgid "HSL"
-msgstr "HSL"
+#: src/widgets/about_window.rs:88
+msgid "Parse RGBA/ARGB Hex-Colors"
+msgstr "Analyse des couleurs hexagonales RGBA / ARGB"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:19
-#: src/widgets/preferences.rs:328
-msgid "HSV"
-msgstr "HSV"
+#: src/widgets/about_window.rs:89
+msgid "View colors in Hex, RGB, HSV, HSL, CMYK, XYZ and CIE-Lab format"
+msgstr ""
+"Visualisez les couleurs en format hexadécimal, RGB, HSV, HSL, CMYK, XYZ et "
+"CIELAB"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:20
-#: src/widgets/preferences.rs:337
-msgid "CMYK"
-msgstr "CMYK"
+#: src/widgets/about_window.rs:90
+msgid "Customize which formats appear as well as their order"
+msgstr "Personnalisez les formats visibles et leur ordre d’affichage"
 
 #: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:21
-#: src/widgets/preferences.rs:346
-msgid "XYZ"
-msgstr "XYZ"
+#: src/widgets/about_window.rs:91
+msgid "Generate a palette of different shades"
+msgstr "Générez une palette de différentes nuances"
 
-#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:22
-#: src/widgets/preferences.rs:355
-msgid "CIELAB"
-msgstr "CIELAB"
-
-#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:28
+#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:27
 msgid "Main window dark"
 msgstr "Fenêtre principale sombre"
 
-#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:32
+#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:31
 msgid "Main window light"
 msgstr "Fenêtre principale claire"
 
-#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:36
+#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:35
 msgid "Customized color formatting in dark mode"
 msgstr "Formatage personnalisé des couleurs en mode sombre"
 
-#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:40
+#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:39
 msgid "Customized color formatting"
 msgstr "Formatage personnalisé des couleurs"
 
-#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:86
+#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:43
+msgid "Generated color palettes"
+msgstr "Palettes de couleur générées"
+
+#: data/com.github.finefindus.eyedropper.metainfo.xml.in.in:92
 msgid "FineFindus"
 msgstr "FineFindus"
-
-#: data/resources/ui/color-model-entry.ui:22
-msgctxt "Tooltip of the copy button for format rows"
-msgid "Copy Format"
-msgstr "Copier le format"
-
-#: data/resources/ui/hex-entry.ui:22
-msgctxt "Tooltip of the copy button for the hex format"
-msgid "Copy Format"
-msgstr "Copier le format"
-
-#: data/resources/ui/preferences.ui:10
-msgid "General"
-msgstr "Général"
-
-#: data/resources/ui/preferences.ui:13
-msgid "Formatting"
-msgstr "Formatage"
-
-#: data/resources/ui/preferences.ui:16
-msgid "Alpha-Value-Position"
-msgstr "Position de la valeur alpha"
-
-#: data/resources/ui/preferences.ui:17
-msgid "Where the Alphavalue is positioned in the Hexstring"
-msgstr "Position de la valeur alpha dans la chaîne hexadécimale"
-
-#: data/resources/ui/preferences.ui:21
-msgid "None"
-msgstr "Aucune"
-
-#: data/resources/ui/preferences.ui:22
-msgid "End"
-msgstr "Fin"
-
-#: data/resources/ui/preferences.ui:23
-msgid "Start"
-msgstr "Début"
-
-#: data/resources/ui/preferences.ui:33
-msgid "Color Formats"
-msgstr "Formats de couleur"
-
-#: data/resources/ui/preferences.ui:34
-msgid "Customize the visible formats and in which order they are displayed."
-msgstr "Personnalisez les formats visibles et leur ordre d’affichage."
-
-#: data/resources/ui/preferences.ui:38
-msgctxt "Tooltip of the button to reset the format order"
-msgid "Reset Order"
-msgstr "Réinitialiser l’ordre"
 
 #: data/resources/ui/shortcuts.ui:11
 msgctxt "shortcut window"
@@ -220,31 +171,419 @@ msgctxt "Tooltip of the colorpicker button"
 msgid "Pick a Color"
 msgstr "Choisir une couleur"
 
+#: data/resources/ui/hex-entry.ui:22
+msgctxt "Tooltip of the copy button for the hex format"
+msgid "Copy Format"
+msgstr "Copier le format"
+
+#: data/resources/ui/preferences.ui:10
+msgid "General"
+msgstr "Général"
+
+#: data/resources/ui/preferences.ui:13
+msgid "Formatting"
+msgstr "Formatage"
+
+#: data/resources/ui/preferences.ui:16
+msgid "Alpha-Value-Position"
+msgstr "Position de la valeur alpha"
+
+#: data/resources/ui/preferences.ui:17
+msgid "Where the Alphavalue is positioned in the Hexstring"
+msgstr "Position de la valeur alpha dans la chaîne hexadécimale"
+
+#: data/resources/ui/preferences.ui:21
+msgctxt "Alpha is not shown"
+msgid "None"
+msgstr "Aucune"
+
+#: data/resources/ui/preferences.ui:22
+msgctxt "Alpha is shown at the end of the string"
+msgid "End"
+msgstr "Fin"
+
+#: data/resources/ui/preferences.ui:23
+msgctxt "Alpha is shown at the start of the string"
+msgid "Start"
+msgstr "Début"
+
+#: data/resources/ui/preferences.ui:31
+msgid "CIE standard observer"
+msgstr "Observateur standard CIE"
+
+#: data/resources/ui/preferences.ui:32
+msgid "Field of view used by the CIE standard observer"
+msgstr "Champ de vision utilisé par l’observateur standard CIE"
+
+#: data/resources/ui/preferences.ui:36
+msgctxt "CIE 2° standard observer"
+msgid "2°"
+msgstr "2°"
+
+#: data/resources/ui/preferences.ui:37
+msgctxt "CIE 10° standard observer"
+msgid "10°"
+msgstr "10°"
+
+#: data/resources/ui/preferences.ui:45
+msgid "CIE illuminants"
+msgstr "Illuminants CIE"
+
+#: data/resources/ui/preferences.ui:46
+msgid "Under which conditions are the colors observed"
+msgstr "Sous quelles conditions les couleurs sont observées"
+
+#: data/resources/ui/preferences.ui:50
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "A (Incandescent/tungsten)"
+msgstr "A (Incandescent / tungstène)"
+
+#: data/resources/ui/preferences.ui:51
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "B (Old direct sunlight at noon)"
+msgstr "B (Vieille lumière directe du soleil au zénith)"
+
+#: data/resources/ui/preferences.ui:52
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "C (Old daylight)"
+msgstr "C (Vieille lumière du jour)"
+
+#: data/resources/ui/preferences.ui:53
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "D50 (ICC profile PCS)"
+msgstr "D50 (ICC profil PCS)"
+
+#: data/resources/ui/preferences.ui:54
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "D55 (Mid-morning daylight)"
+msgstr "D55 (Lumière du jour en milieu de matinée)"
+
+#: data/resources/ui/preferences.ui:55
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "D65 (Daylight, sRGB, Adobe-RGB)"
+msgstr "D65 (Lumière du jour, sRGB, Adobe-RGB)"
+
+#: data/resources/ui/preferences.ui:56
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "D75 (North sky daylight)"
+msgstr "D75 (Lumière du jour sous un ciel nordique)"
+
+#: data/resources/ui/preferences.ui:57
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "E (Equal energy)"
+msgstr "E (Énergie égale)"
+
+#: data/resources/ui/preferences.ui:58
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F1 (Daylight Fluorescent)"
+msgstr "F1 (Fluorescente Lumière du jour)"
+
+#: data/resources/ui/preferences.ui:59
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F2 (Cool fluorescent)"
+msgstr "F2 (Fluorescent froid)"
+
+#: data/resources/ui/preferences.ui:60
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F3 (White Fluorescent)"
+msgstr "F3 (Fluorescent blanc)"
+
+#: data/resources/ui/preferences.ui:61
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F4 (Warm White Fluorescent)"
+msgstr "F4 (Fluorescent blanc chaud)"
+
+#: data/resources/ui/preferences.ui:62
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F5 (Daylight Fluorescent)"
+msgstr "F5 (Fluorescent Lumière du jour)"
+
+#: data/resources/ui/preferences.ui:63
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F6 (Lite White Fluorescent)"
+msgstr "F6 (Fluorescent blanc léger)"
+
+#: data/resources/ui/preferences.ui:64
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F7 (Daylight fluorescent, D65 simulator)"
+msgstr "F7 (Fluorescent Lumière du jour, simulateur D65)"
+
+#: data/resources/ui/preferences.ui:65
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F8 (Sylvania F40, D50 simulator)"
+msgstr "F8 (Sylvania F40, simulateur D50)"
+
+#: data/resources/ui/preferences.ui:66
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F9 (Cool White Fluorescent)"
+msgstr "F9 (Fluorescent blanc froid)"
+
+#: data/resources/ui/preferences.ui:67
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F10 (Ultralume 50, Philips TL85)"
+msgstr "F10 (Ultralume 50, Philips TL85)"
+
+#: data/resources/ui/preferences.ui:68
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F11 (Ultralume 40, Philips TL84)"
+msgstr "F11 (Ultralume 40, Philips TL84)"
+
+#: data/resources/ui/preferences.ui:69
+msgctxt ""
+"CIE illuminant, more info at https://en.wikipedia.org/wiki/"
+"Standard_illuminant"
+msgid "F12 (Ultralume 30, Philips TL83)"
+msgstr "F12 (Ultralume 30, Philips TL83)"
+
+#: data/resources/ui/preferences.ui:77
+msgid "Name Sets"
+msgstr "Ensembles de noms"
+
+#: data/resources/ui/preferences.ui:78
+msgid "Which color name sets should be used for the names"
+msgstr "Quel ensemble de noms devrait être utilisé pour les noms"
+
+#: data/resources/ui/preferences.ui:92
+msgid "Color Formats"
+msgstr "Formats de couleur"
+
+#: data/resources/ui/preferences.ui:93
+msgid "Customize the visible formats and in which order they are displayed."
+msgstr "Personnalisez les formats visibles et leur ordre d’affichage."
+
+#: data/resources/ui/preferences.ui:97
+msgctxt "Tooltip of the button to reset the format order"
+msgid "Reset Order"
+msgstr "Réinitialiser l’ordre"
+
+#: data/resources/ui/color-format-row.ui:22
+msgctxt "Tooltip of the copy button for format rows"
+msgid "Copy Format"
+msgstr "Copier le format"
+
+#: data/resources/ui/palette-window.ui:5
+msgid "Palettes"
+msgstr "Palettes"
+
 #. Translators: This should not be translate, Please enter your credits here instead (format: "Name https://example.com" or "Name <email@example.com>", no quotes)
-#: src/application.rs:167
+#: src/widgets/about_window.rs:50
 msgid "translator-credits"
 msgstr "Irénée Thirion"
 
-#: src/widgets/preferences.rs:214
+#: src/widgets/about_window.rs:110
+msgctxt ""
+"The changelog of the current version. Should be similar to the CHANGELOG.md "
+"file at the project root. Please ensure that the tags have a matching "
+"closing tag. Since xgettext does not recognize rust multiline strings, this "
+"should be on a single line using line breaks (\\n) for new lines."
+msgid ""
+"<p>This release extends the current available features.</p><p> Features:</"
+"p>\n"
+"<ul><li> The name of the color, specified by w3c color keywords and the xkcd "
+"color survey, can now be shown</li><li>Switch the color by entering a color "
+"keyword</li><li> A new Palette dialog showing different color palettes</"
+"li><li>Choose which CIE standard observer is used, as well as it's "
+"illuminant</li><li> Show the CIELCh color format</li><li> Using the new "
+"AdwAboutWindow</li><li> Added new translations</li><li>Fixed minor issues</"
+"li></ul>"
+msgstr ""
+"<p>Cette version élargit les fonctionnalités actuellement disponibles.</"
+"p><p> Fonctionnalités :</p>\n"
+"<ul><li> Le nom de la couleur, spécifié par les mots-clés du W3C et de "
+"l’enquête sur les couleurs XKCD, peut désormais être affiché</li><li>Changez "
+"la couleur en entrant un mot-clé de couleur</li><li> Nouvelle fenêtre "
+"Palette affichant différentes palettes de couleurs</li><li>Choisissez "
+"l’observateur standard CIE utilisé, ainsi que son illuminant.</li><li> "
+"Affiche le format de couleur CIELCh</li><li> Nouvelle fenêtre "
+"AdwAboutWindow</li><li> Ajout de nouvelles traductions</li><li>Correction de "
+"problèmes mineurs</li></ul>"
+
+#: src/widgets/palette_dialog.rs:130
+msgctxt "Name for tints (lighter variants) of the color"
+msgid "Tints"
+msgstr "Nuances claires"
+
+#: src/widgets/palette_dialog.rs:134
+msgctxt "Name for shades (darker variants) of the color"
+msgid "Shades"
+msgstr "Nuances sombres"
+
+#: src/widgets/palette_dialog.rs:140
+msgctxt "Name for the opposite/complementary color (e.g. blue ⇔ yellow)"
+msgid "Complementary"
+msgstr "Complémentaire"
+
+#: src/widgets/palette_dialog.rs:147
+msgctxt ""
+"The name of the color palette. Consist of the two opposite colors (e.g. blue "
+"⇔ orange / green)"
+msgid "Split-Complementary"
+msgstr "Complémentaires séparées"
+
+#: src/widgets/palette_dialog.rs:154
+msgctxt ""
+"Name of the color palette, which would form a triangle above the color wheel"
+msgid "Triadic"
+msgstr "Triadique"
+
+#: src/widgets/palette_dialog.rs:159
+msgctxt "The name of the color palette."
+msgid "Tetradic"
+msgstr "Tétradique"
+
+#: src/widgets/palette_dialog.rs:165
+msgctxt "Color palette consisting of six slight shifted colors"
+msgid "Analogous"
+msgstr "Analogues"
+
+#: src/widgets/preferences.rs:147
+msgctxt ""
+"Name of the basic color keyword set from https://www.w3.org/TR/css-color-3/"
+"#html4"
+msgid "Basic"
+msgstr "Basique"
+
+#: src/widgets/preferences.rs:149
+msgid "Show color names from the w3c basic color keyword set"
+msgstr ""
+"Affiche les noms des couleurs à partir de l’ensemble basique des couleurs du "
+"W3C"
+
+#: src/widgets/preferences.rs:155
+msgctxt ""
+"Name of the extended color keyword set from https://www.w3.org/TR/css-"
+"color-3/#svg-color"
+msgid "Extended"
+msgstr "Étendu"
+
+#: src/widgets/preferences.rs:157
+msgid "Show color names from the w3c extended color keyword  set"
+msgstr ""
+"Affiche les noms des couleurs à partir de l’ensemble étendu des couleurs du "
+"W3C"
+
+#: src/widgets/preferences.rs:161
+msgctxt "Name of the color set from the xkcd color survey"
+msgid "xkcd"
+msgstr "xkcd"
+
+#: src/widgets/preferences.rs:162
+msgid "Show color names from the xkcd color survey"
+msgstr ""
+"Affiche les noms des couleurs à partir de l’enquête sur les couleurs XKCD"
+
+#: src/widgets/preferences.rs:301
 msgid "Move Up"
 msgstr "Déplacer vers le haut"
 
-#: src/widgets/preferences.rs:216
+#: src/widgets/preferences.rs:303
 msgid "Move Down"
 msgstr "Déplacer vers le bas"
 
-#: src/widgets/preferences.rs:305
+#: src/widgets/preferences.rs:423
 msgid "Hex-Code"
 msgstr "Code hexadécimal"
 
-#: src/window.rs:460
+#: src/widgets/preferences.rs:429
+msgid "RGB"
+msgstr "RGB"
+
+#: src/widgets/preferences.rs:435
+msgid "HSL"
+msgstr "HSL"
+
+#: src/widgets/preferences.rs:443
+msgid "HSV"
+msgstr "HSV"
+
+#: src/widgets/preferences.rs:452
+msgid "CMYK"
+msgstr "CMYK"
+
+#: src/widgets/preferences.rs:461
+msgid "XYZ"
+msgstr "XYZ"
+
+#: src/widgets/preferences.rs:470
+msgid "CIELAB"
+msgstr "CIELAB"
+
+#: src/widgets/preferences.rs:482
+msgid "HWB"
+msgstr "HWB"
+
+#: src/widgets/preferences.rs:496
+msgid "CIELCh / HCL"
+msgstr "CIELCh / HCL"
+
+#: src/widgets/preferences.rs:503
+msgid "Name"
+msgstr "Nom"
+
+#: src/window.rs:349 src/window.rs:635
+msgctxt "Information that no name for the color could be found"
+msgid "Not named"
+msgstr "Pas de nom"
+
+#: src/window.rs:537
+msgid "Failed to get palette color"
+msgstr "Échec de la récupération de la couleur de la palette"
+
+#: src/window.rs:557
 msgid "Failed to pick a color"
 msgstr "Échec de la sélection de la couleur"
 
 #. Translators: Do not replace the {}. These are used as placeholders for the copied values
-#: src/window.rs:567 src/window.rs:574
+#: src/window.rs:655
 msgid "Copied: “{}”"
 msgstr "Copié : « {} »"
+
+#~ msgid "An easy-to-use color picker"
+#~ msgstr "Un sélecteur de couleurs facile à utiliser"
+
+#~ msgid "Available Formats:"
+#~ msgstr "Formats disponibles :"
+
+#~ msgid "Hex"
+#~ msgstr "Hexadécimal"
 
 #~ msgid "Choose which formats will be visible"
 #~ msgstr "Choisissez quels formats seront visibles"
